# build-a-large-language-model

./: README.md  pyproject.toml
ch02-working-with-text-data/: data_loader.py  embedding.py  simple_tokenizer_v1.py  sliding_sampling.py  tokenizer.py  vocabulary.py
ch02_working_with_text_data/: data_loader.py  download.py  pyproject.toml  simple_tokenizer_v2.py  sliding_sampling.py  vocabulary.py
ch03-coding-attention-mechanisms/: attention_weights.py  compact_self_attention.py  pyproject.toml  self_attention_v1.py  simple_self_attention.py
ch03_coding_attention_mechanisms/: compact_self_attention.py  main.py  multihead_attention.py  pyproject.toml  self_attention_v2.py  simple_self_attention.py
ch04-impl-gpt-from-scratch/: pyproject.toml
ch04_impl_gpt_from_scratch/: feed_forward.py  gelu.py  generate_text.py  gpt_model.py  main.py  norm.py  pyproject.toml  transformer.py
ch05_pretrain_without_label/: main.py  pyproject.toml
ipynb/: coding-attention-mechanisms.ipynb  impl-gpt-from-scratch.ipynb  pretrain-without-label.ipynb
