[project]
name = "build-a-large-language-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipywidgets>=8.1.8",
    "tiktoken>=0.8.0",
    "torch>=2.5.1",
]

[tool.uv.workspace]
members = [
    "ch02-working-with-text-data",
    "ch03-coding-attention-mechanisms",
    "ch04-impl-gpt-from-scratch",
]
