[project]
name = "build-a-large-language-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "numpy>=2.2.3",
    "tiktoken>=0.8.0",
    "torch>=2.5.1",
]

[tool.uv.workspace]
members = [
    "ch02_working_with_text_data",
    "ch03_coding_attention_mechanisms",
    "ch04_impl_gpt_from_scratch",
]
